@@ -94,7 +94,6 @@ import static java.util.Comparator.naturalOrder;
 import static java.util.function.Predicate.not;
 import static java.util.logging.Level.INFO;
 import static java.util.logging.Level.WARNING;
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toUnmodifiableList;
 
 /**
@@ -184,7 +183,7 @@ public class JobController {
     public void log(RunId id, Step step, Level level, List<String> messages) {
         log(id, step, messages.stream()
                               .map(message -> new LogEntry(0, controller.clock().instant(), LogEntry.typeOf(level), message))
-                              .collect(toList()));
+                              .toList());
     }
 
     /** Stores the given log message for the given run and step. */
